webinar-demo/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-nginx
  namespace: webinar-demo
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: webserver-nginx
        image: nginx
        resources:
          limits:
            memory: "10Mi"
            cpu: "100m"
